# django-df-notifications

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: release.yml  test.yml
df_notifications/: admin.py  apps.py  channels.py  context_processors.py  decorators.py  defaults.py  fields.py  models.py  settings.py  tasks.py  transports.py  twitter_client.py  utils.py
df_notifications/djangoflow/: settings.py
df_notifications/drf/: serializers.py  urls.py  viewsets.py
df_notifications/migrations/: 0001_initial.py  0002_alter_notificationhistory_options_and_more.py  0002_remove_notificationhistory_df_notifica_templat_fc63aa_idx_and_more.py  0003_remove_notificationhistory_df_notifica_templat_ec4b48_idx_and_more.py  0004_pushactioncategory_pushaction.py  0005_alter_pushactioncategory_options.py  0006_alter_userdevice_registration_id.py  0007_custompushmessage.py  0008_alter_custompushmessage_action_url_and_more.py  0009_alter_notificationhistory_instance_id.py  0009_custompushnotification.py
df_notifications/templates/: base_email.html  base_slack.html
df_notifications/templates/df_notifications/: base_email.html  base_notification.html  base_slack.html
tests/: celery.py  channels.py  conftest.py  settings.py  transports.py  urls.py
tests/test_app/: admin.py  models.py  tests.py
tests/test_app/cassettes/tests/: test_send_notification_without_model_twitter_channel.yaml
tests/test_app/migrations/: 0001_initial.py  0002_alter_postnotificationaction_channel_and_more.py  0002_alter_postnotificationreminder_history_and_more.py  0002_post_author_postnotificationaction.py  0003_postnotificationreminder_action.py  0004_alter_postnotificationrule_is_published_prev.py  0005_rename_template_prefix_postnotificationreminder_template_and_more.py  0006_rename_template_postnotificationreminder_template_prefix_and_more.py  0007_asyncpostnotificationrule.py
tests/test_app/templates/post/: body.txt  subject.txt
tests/test_app/test/: test_json_post_webhook_channel.py  test_notifications.py
